# ARQ-Rust

./: .gitignore  LICENSE  README.md  bugs.md
arq/: Cargo.toml  kill.sh  log4rs.yaml
arq/resources/: settings.json
arq/resources/diagrams/: world-container-callback-sequence.mmd  world-container-data-ownership.mmd
arq/resources/test/: container_choice_draw_result.txt  container_draw_result.txt  world_container_selection.txt
arq/scripts/: coverage.sh
arq/src/: character.rs  character_view.rs  colour_mapper.rs  container.rs  container_view.rs  door.rs  engine.rs  error.rs  error_utils.rs  game_engine.rs  global_flags.rs  input.rs  item_list_selection.rs  items.rs  list_selection.rs  main.rs  map.rs  map_generator.rs  map_view.rs  menu.rs  option_list_selection.rs  pathfinding.rs  position.rs  progress.rs  room.rs  settings.rs  sound.rs  terminal.rs  terminal_manager.rs  test.rs  tile.rs  ui.rs  view.rs  widget.rs
arq/src/character/: battle.rs  builder.rs  character_details.rs  characters.rs  equipment.rs
arq/src/engine/: combat.rs  command.rs  container_util.rs  engine_helpers.rs  game_engine.rs  game_loop.rs  input_handler.rs  level.rs  map_generation.rs  menu.rs  pathfinding.rs  process.rs
arq/src/error/: errors.rs  io_error_utils.rs
arq/src/map/: map_generator.rs  map_view_areas.rs  objects.rs  position.rs  room.rs  tile.rs
arq/src/sound/: audio_sink.rs  sound.rs
arq/src/terminal/: colour_mapper.rs  terminal_manager.rs
arq/src/test/: dropdown_widget_tests.rs  number_widget_tests.rs  text_widget_tests.rs  utils.rs  widget_tests.rs
(+111 files in other folders)
