[package]
name = "arq"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.4"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
log = "0.4.14"
log4rs = "1.0.0"
tui = "0.12"
termion = "1.5"
uuid = { version = "0.4", features = ["serde", "v4"] }
rodio = "0.16.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }