[package]
name = "arq"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.4"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
log = "0.4.14"
log4rs = "1.0.0"
tui = "0.19.0"
termion = "3.0.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
rodio = "0.17.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
lcov = "0.8.1"