[package]
name = "arq"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "~0.9.1"
rand_seeder = "~0.4"
rand_pcg = "~0.9"
log = "~0.4"
log4rs = "~1.3"
uuid = { version = "~1.16", features = ["serde", "v4"] }
rodio = "~0.20"
futures = "~0.3"
tokio = { version = "~1.44", features = ["full"] }
tokio-util = "~0.7" 
lcov = "~0.8.1"
ratatui = "~0.29.0"
termion = "~4.0.5"
crossterm = "~0.29.0"
serde_json = "1.0.67"